# Django_CadastroProdutos_PostgresSQL_GitHub_Actions_CI

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
backend/: settings.py  urls.py
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_produto_nome.py
core/templates/: contato.html  index.html  produto.html
core/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
